--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -85,22 +85,21 @@
 		-webkit-animation: AnimationName 30s ease infinite;
 		-moz-animation: AnimationName 30s ease infinite;
 		animation: AnimationName 30s ease infinite;
-
-		@-webkit-keyframes AnimationName {
-		    0%{background-position:0% 32%}
-		    50%{background-position:100% 69%}
-		    100%{background-position:0% 32%}
-		}
-		@-moz-keyframes AnimationName {
-		    0%{background-position:0% 32%}
-		    50%{background-position:100% 69%}
-		    100%{background-position:0% 32%}
-		}
-		@keyframes AnimationName {
-		    0%{background-position:0% 32%}
-		    50%{background-position:100% 69%}
-		    100%{background-position:0% 32%}
-		}
+	}
+	@-webkit-keyframes AnimationName {
+			0%{background-position:0% 32%}
+			50%{background-position:100% 69%}
+			100%{background-position:0% 32%}
+	}
+	@-moz-keyframes AnimationName {
+			0%{background-position:0% 32%}
+			50%{background-position:100% 69%}
+			100%{background-position:0% 32%}
+	}
+	@keyframes AnimationName {
+			0%{background-position:0% 32%}
+			50%{background-position:100% 69%}
+			100%{background-position:0% 32%}
 	}
 
 	body {
@@ -760,7 +759,7 @@
 
 			}
 
-			#main .avatar:before {
+			/* #main .avatar:before {
 				content: '';
 				display: block;
 				position: absolute;
@@ -770,7 +769,7 @@
 				height: 1px;
 				z-index: -1;
 				background: #c8cccf;
-			}
+			} */
 
 		@media screen and (max-width: 480px) {
 
